# azure-storage-hs

./: .ghci  .gitignore  LICENSE  README.md  appveyor.yml  azure-storage.cabal  package.yaml  stack.yaml
src/Azure/: Storage.hs
src/Azure/Storage/: Authentication.hs  Blob.hs  Request.hs  Types.hs
src/Azure/Storage/Blob/: GetBlob.hs  GetBlobMetadata.hs  PutBlob.hs  PutBlobMetadata.hs  Service.hs  Types.hs
tests/: integration-tests.hs  unit-tests.hs
