name:                azure-storage
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Porges/azure-storage#readme
license:             BSD3
license-file:        LICENSE
author:              George Pollard
maintainer:          porges@porg.es
copyright:           2018 George Pollard
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -Wall
  exposed-modules:   Azure.Storage
                   , Azure.Storage.Authentication
                   , Azure.Storage.Blob
  build-depends:     base >= 4.7 && < 5
                   , bytestring
                   , case-insensitive
                   , conduit
                   , connection-string
                   , containers
                   , cryptonite
                   , data-default-class
                   , either
                   , http-client >= 0.5.10 && < 0.6
                   , http-client-tls
                   , http-conduit
                   , http-types
                   , memory
                   , mtl
                   , network-uri
                   , resourcet
                   , text
                   , time
                   , xml-conduit

test-suite integration-tests
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  ghc-options:       -threaded
  main-is:           integration-tests.hs
  build-depends:     base
                   , azure-storage
                   , conduit
                   , hedgehog
                   , http-client
                   , either
                   , mtl
                   , process
                   , resourcet
                   , tasty
                   , tasty-hedgehog
                   , tasty-hunit

test-suite unit-tests
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  ghc-options:       -threaded
  main-is:           unit-tests.hs
  build-depends:     base
                   , azure-storage
                   , hedgehog
                   , either
                   , tasty
                   , tasty-hedgehog
                   , tasty-hunit

test-suite doctests
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  ghc-options:       -threaded
  hs-source-dirs:    tests
  main-is:           doctest-driver.hs
  build-depends:     base
                   , azure-storage
                   , doctest
                   , doctest-discover
